--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,7 @@ section.wrapper-content aside.profile img.avatar {
   border: 5px solid #fff;
   border-radius: 50%;
   margin-top: -130px;
+  background-color: #667580;
 }
 
 section.wrapper-content aside.profile h1 {
@@ -289,3 +290,111 @@ section.wrapper-content aside.profile .images ul li {
   flex: 1 0 auto;
 }
 
+section.wrapper-content .timeline {
+  flex: 1;
+}
+section.wrapper-content aside.widgets {
+  width: 290px;
+}
+
+section.wrapper-content aside.widgets .widget {
+  background-color: #FFF;
+  padding: 15px;
+  margin: 10px;
+}
+
+section.wrapper-content aside.widgets .widget .title {
+  display: flex;
+}
+
+section.wrapper-content aside.widgets .widget .title strong {
+  font-size: 18px;
+  color: #1F2226;
+}
+
+section.wrapper-content aside.widgets .widget .title a {
+  position: relative;
+  font-size: 12px;
+  color: #3BB9E3;
+  text-decoration: none;
+  padding-left: 10px;
+}
+
+section.wrapper-content aside.widgets .widget .title a::before {
+  position: absolute;
+  content: '';  
+  width: 2px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: #222;
+  left: 4px;
+  top: 6px;
+}
+
+section.wrapper-content aside.widgets .follow ul {
+  list-style: none;
+  margin-top: 10px;
+}
+
+section.wrapper-content aside.widgets .follow ul li {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #CCD6DD;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+section.wrapper-content aside.widgets .follow ul li:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border: 0;
+}
+
+section.wrapper-content aside.widgets .follow ul li .profile {
+  display: flex;
+  align-items: center;
+}
+
+section.wrapper-content aside.widgets .follow ul li .profile img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+
+section.wrapper-content aside.widgets .follow ul li .profile .info {
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+section.wrapper-content aside.widgets .follow ul li .profile .info strong {
+  font-size: 14px;
+  color: #1F2326;
+}
+
+section.wrapper-content aside.widgets .follow ul li .profile .info strong span {
+  font-weight: normal;
+  color: #9a9a9a;
+}
+
+section.wrapper-content aside.widgets .follow ul li .profile .info button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  width: 90px;
+  height: 27px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #3BB9E3;
+  background-color: #fff;
+  margin-top: 4px;
+  border: 1px solid #3BB9E3;
+  border-radius: 16px;
+}
+
+section.wrapper-content aside.widgets .follow ul li > a {
+  color: #CCD6DD;
+  font-size: 16px;
+  text-decoration: none;
+}
